# rat-solar-modelling

./: LICENSE  README.md  pyproject.toml
notebooks/: Untitled.ipynb  solar_param_modelling.ipynb
src/: init_notebook.py
src/rat/: parameter_sweep.py  pvwatts_api.py
tests/: test_parameter_sweep.py
