[tool.poetry]
name = "rat-solar-modelling"
version = "0.1.0"
description = ""
authors = ["Dan Lopuch <dlopuch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.3.4"
pytest = "^6.2.5"
pydash = "^5.1.0"
requests = "^2.26.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
